<package>
  <name>cereal_port</name>
  <version>1.0.0</version>
  <description>
	Simple C++ serial port class for ROS.
</description>
  <maintainer email="goncabrita@gmail.com">Gonçalo Cabrita</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/cereal_port</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Gonçalo Cabrita</author>
  <author>Pedro Sousa</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->

<export>
    <rosdoc config="rosdoc.yaml"/>
</export>

</package>

